

## validate_string_param
set(JBPF_TESTS ${JBPF_TESTS} PARENT_SCOPE)
set(JBPF_UNIT_TEST_VALID_STRING_PARAM jbpf_unit_test_valid_string_param)
set(JBPF_UNIT_TEST_VALID_STRING_PARAM_SOURCE validate_string_param_test.c ${TESTS_COMMON}/jbpf_test_lib.c)
add_executable(${JBPF_UNIT_TEST_VALID_STRING_PARAM} ${JBPF_UNIT_TEST_VALID_STRING_PARAM_SOURCE})
target_link_libraries(${JBPF_UNIT_TEST_VALID_STRING_PARAM} PUBLIC jbpf::core_lib)
target_include_directories(${JBPF_UNIT_TEST_VALID_STRING_PARAM} PUBLIC ${JBPF_LIB_HEADER_FILES} ${TEST_HEADER_FILES})
add_test(NAME unit_tests/${JBPF_UNIT_TEST_VALID_STRING_PARAM} COMMAND ${JBPF_UNIT_TEST_VALID_STRING_PARAM})
list(APPEND JBPF_TESTS ${JBPF_UNIT_TEST_VALID_STRING_PARAM})
add_clang_format_check(${JBPF_UNIT_TEST_VALID_STRING_PARAM} ${JBPF_UNIT_TEST_VALID_STRING_PARAM_SOURCE})
add_cppcheck(${JBPF_UNIT_TEST_VALID_STRING_PARAM} ${JBPF_UNIT_TEST_VALID_STRING_PARAM_SOURCE})
set(JBPF_TESTS ${JBPF_TESTS} PARENT_SCOPE)